fix: prevent layout shift in showcase project images
- Add aspect-ratio to post images to reserve space before load
- Add lazy loading for better performance on showcase page

--- a/src/scss/components/_post.scss
+++ b/src/scss/components/_post.scss
@@ -51,6 +51,7 @@
     display: block;
     width: 100%;
     height: 100%;
+    aspect-ratio: 16 / 10;
     object-fit: cover;
     @include transition($on: all, $time: 500ms);
   }
